retrieveUnpackaged/objects/RFP__c.object
<CustomObject>
    <fields>
        <fullName>CFDA_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CFDA number</label>
        <referenceTo>CFDA_Number__c</referenceTo>
        <relationshipLabel>RFP</relationshipLabel>
        <relationshipName>RFP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>RFP</relationshipLabel>
        <relationshipName>RFP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notice_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notice ID</label>
        <referenceTo>Notice__c</referenceTo>
        <relationshipLabel>RFP</relationshipLabel>
        <relationshipName>RFP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_End_Date__c</fullName>
        <label>RFP End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Start_Date__c</fullName>
        <label>RFP Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Summary__c</fullName>
        <label>RFP Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RFP_name__c</fullName>
        <label>RFP Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Review In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>RFP</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>RFP ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>